@@ -1,3 +1,13 @@
+2006-01-23  Jan Nieuwenhuizen  <janneke@gnu.org>
+
+	* flower/include/std-string.hh: Oops, bugfix for --disable-std-string.
+
+	* flower/include/getopt-long.hh: Use std::string [interface].
+	Update callers.
+
+	* stepmake/stepmake/executable-rules.make: Add dependency on
+	module libraries.
+
 2006-01-22  Jan Nieuwenhuizen  <janneke@gnu.org>
 
 	* flower/file-path.cc: 
